--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,42 +1,66 @@
+--- #---------------------------------------------------------------------------------------------
+#---------------------------------------------------------------------------------------------
+#  Copyright (c) Spudmash Media Pty Ltd
+#  Licensed under the MIT License. See License.txt in the project root for license information.
 name: Rust
 
 on:
   push:
-    branches: [ master ]
+    branches: [master]
   pull_request:
-    branches: [ master ]
+    branches: [master]
 
 env:
   CARGO_TERM_COLOR: always
+  NPM_PUBLISH_CONFIG_URL: "https://npm.pkg.github.com"
+  NPM_SCOPE: "spudmashmedia"
 
 jobs:
-  build:
-
+  wasm_pack:
     runs-on: ubuntu-latest
-    - name: Install
-    run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
-    
+
     steps:
-    - uses: actions/checkout@v2
+      - name: "[Setup Actions]"
+        uses: actions/checkout@v2
 
-    - name: Rust - Build
-      run: cargo build --verbose
-    - name: Rust - Run tests
-      run: cargo test --verbose
+      - name: "[Setup wasm-pack]"
+        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
-    - name: wasm-pack - Build
-      run:  wasm-pack build
-    - name: wasm-pack - test
-      run: wasm-pack test --headless --chrome
-      run: wasm-pack test --headless --firefox
+      - name: "[Run Test - Headless Chrome]"
+        run: wasm-pack test --headless --chrome
 
-    - uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
-        registry-url: 'https://npm.pkg.github.com'
-        scope: '@spudmashmedia'
-    - name: wasm-pack - deploy package
-      run: wasm-pack pack
-      run: wasm-pack publish
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: "[Run Test - Headless Firefox]"
+        run: wasm-pack test --headless --firefox
+
+      - name: "[wasm-pack build]"
+        run: wasm-pack build --scope $NPM_SCOPE
+
+      - name: "[Upload Artifacts to temp storage]"
+        uses: actions/upload-artifact@v1
+        with:
+          name: wasm_output
+          path: /home/runner/work/randu-core/randu-core/pkg
+
+  npm_publish:
+    runs-on: ubuntu-latest
+    needs: wasm_pack
+    strategy:
+      matrix:
+        node-version: [12.x] # no quotes on the node versions
+    steps:
+      - name: "[Download Artifacts from previous build step]"
+        uses: actions/download-artifact@v1
+        with:
+          name: wasm_output
+
+      - name: "[Setup Node ${{ matrix.node-version}}]"
+        uses: actions/setup-node@v1.4.2
+        with:
+          node-version: ${{ matrix.node-version }}
+          registry-url: "${{ env.NPM_PUBLISH_CONFIG_URL }}"
+          scope: "@${{ env.NPM_SCOPE }}"
+
+      - name: "[NPM Publish to GitHub Packages (*note: navigate to package.json before running npm)]"
+        run: cd wasm_output &&  npm publish --verbose
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
