--- a/.github/workflows/rust_wasm.yaml
+++ b/.github/workflows/rust_wasm.yaml
@@ -1,8 +1,8 @@
---- #---------------------------------------------------------------------------------------------
-#---------------------------------------------------------------------------------------------
+#
 #  Copyright (c) Spudmash Media Pty Ltd
-#  Licensed under the MIT License. See License.txt in the project root for license information.
-name: Rust
+#  Licensed under the MIT License. See License.md in the project root for license information.
+#
+name: Rust WebAssembly
 
 on:
   push:
