--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ serde_derive = "^1.0.59"
 serde_json = "1.0"
 serde-wasm-bindgen = "0.1.3"
 uuid = {version="0.8", features=["serde", "v1"]}
+strum = "0.18.0"
+strum_macros = "0.18.0"
+
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
 # logging them with `console.error`. This is great for development, but requires
