--- a/www/package.json
+++ b/www/package.json
@@ -4,18 +4,14 @@
   "description": "create an app to consume rust-generated wasm packages",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --config webpack.config.js",
-    "start": "webpack-dev-server",
-    "dev": "next"
+    "start": "next"
   },
   "devDependencies": {
-    "randu-core": "../pkg",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.5",
-    "copy-webpack-plugin": "^5.0.0"
+    "randu-core": "../pkg"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "next": "^9.4.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
