--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "randu-core"
-version = "0.1.0"
+version = "0.1.2"
 authors = ["spudmashmedia <johnnydong@spudmashmedia.com>"]
 edition = "2018"
 licence = "MIT/Apache-2.0"
@@ -13,7 +13,7 @@ crate-type = ["cdylib", "rlib"]
 default = ["console_error_panic_hook"]
 
 [dependencies]
-wasm-bindgen = { version = "0.2.62", features = ["serde-serialize"]  }
+wasm-bindgen = { version = "0.2.64", features = ["serde-serialize"]  }
 js-sys = "0.3.39"
 wasm-bindgen-futures = "0.4.12"
 serde = { version = "1.0.80", features = ["derive"] }
@@ -40,6 +40,9 @@ wee_alloc = { version = "0.4.2", optional = true }
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3"
+
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
 
 [profile.release]
 # Tell `rustc` to optimize for small code size.
